Chap1Practice/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\PROGRA~1\Java\JDK17~1.0_6\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;\\WJHSSRV2.jhs.sd203.org\MOCirzan$\AP COMPUTER SCIENCE\GitHub\unit1Objects\Chap1Practice
-d
\\WJHSSRV2.jhs.sd203.org\MOCirzan$\AP COMPUTER SCIENCE\GitHub\unit1Objects\Chap1Practice\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\WJHSSRV2.jhs.sd203.org\MOCirzan$\AP COMPUTER SCIENCE\GitHub\unit1Objects\Chap1Practice\TurtleProgram.java
<---- end of javadoc command ---->
Loading source file \\WJHSSRV2.jhs.sd203.org\MOCirzan$\AP COMPUTER SCIENCE\GitHub\unit1Objects\Chap1Practice\TurtleProgram.java...
\\WJHSSRV2.jhs.sd203.org\MOCirzan$\AP COMPUTER SCIENCE\GitHub\unit1Objects\Chap1Practice\TurtleProgram.java:6: error: ';' expected
    public static void main(String[] args)
                                          ^
\\WJHSSRV2.jhs.sd203.org\MOCirzan$\AP COMPUTER SCIENCE\GitHub\unit1Objects\Chap1Practice\TurtleProgram.java:8: error: reached end of file while parsing
    Turtle glen = new Turtle(turleWorld);
                                         ^
2 errors
